--- a/src/routers/User/Header/styles.module.css
+++ b/src/routers/User/Header/styles.module.css
@@ -15,7 +15,7 @@
   height: 100%;
   width: 40%;
   max-width: 50%;
-  background-image: url("../../../asset/logo.png");
+  /*background-image: url("../../../asset/logo.png");*/
   background-position: -12px -3px;
   background-size: 45%;
   background-repeat: no-repeat;
