--- a/src/routers/User/Header/styles.module.css
+++ b/src/routers/User/Header/styles.module.css
@@ -16,7 +16,7 @@
   width: 40%;
   max-width: 50%;
   background-image: url("../../../asset/logo.png");
-  background-position: -12px -3px;
-  background-size: 45%;
+  background-position: left;
+  background-size: contain;
   background-repeat: no-repeat;
 }
