--- a/src/routers/User/TabMenu/styles.module.css
+++ b/src/routers/User/TabMenu/styles.module.css
@@ -10,20 +10,23 @@
   position: fixed;
   bottom: 0;
   text-align: center;
+  padding: 30px 0;
+  margin: 0
 }
-.item {
+.item{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
   width: 25%;
+}
+.item a{
   color: white;
 }
-.item:hover {
+.item a:hover,
+.item a:active{
   color: #f2b134;
 }
-.active {
-  color: #f2b134;
-  font-weight: 700;
-}
+
+
