--- a/src/routers/User/TabMenu/styles.module.css
+++ b/src/routers/User/TabMenu/styles.module.css
@@ -1,7 +1,7 @@
 .container {
   height: 50px;
   width: 100%;
-  background-color: #0894a1;
+  background-color: black;
   border-bottom: 1px solid #666;
   color: white;
   display: flex;
@@ -11,7 +11,8 @@
   bottom: 0;
   text-align: center;
   padding: 30px 0;
-  margin: 0
+  margin: 0;
+  z-index: 400;
 }
 .item{
   display: flex;
@@ -24,9 +25,8 @@
 .item a{
   color: white;
 }
-.item a:hover,
-.item a:active{
-  color: #f2b134;
+.item a:hover{
+  color: #ffd600;
 }
 
 
