--- a/src/routers/User/TabMenu/styles.module.css
+++ b/src/routers/User/TabMenu/styles.module.css
@@ -11,9 +11,9 @@
   bottom: 0;
   text-align: center;
   padding: 30px 0;
-  margin: 0
+  margin: 0;
 }
-.item{
+.item {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -21,12 +21,6 @@
   text-align: center;
   width: 25%;
 }
-.item a{
+.item a {
   color: white;
 }
-.item a:hover,
-.item a:active{
-  color: #f2b134;
-}
-
-
