--- a/src/screens/users/Profile/styles.module.css
+++ b/src/screens/users/Profile/styles.module.css
@@ -1,11 +1,11 @@
 .container {
   width: 100%;
-  /* height: 100%; */
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
   padding: 20px 0;
+  overflow-y: scroll;
 }
 .avatar {
   width: 100%;
