--- a/src/components/cart/ProductItem/styles.module.css
+++ b/src/components/cart/ProductItem/styles.module.css
@@ -19,8 +19,12 @@
 .options {
   display: flex;
   justify-content: start;
-  align-items: center;
-  flex-direction: row;
+  align-items: start;
+  flex-direction: column;
+  padding-left: 10px;
+}
+.options > *:before {
+  content: "- ";
 }
 .options > *:nth-child(1) {
   margin-right: 10px;
