get product from server

--- a/src/components/Category/Category.module.css
+++ b/src/components/Category/Category.module.css
@@ -1,10 +1,15 @@
-.Category {
-    margin: 12px auto !important;
-    box-shadow: 0px 5px 10px 0.2px grey;
-    padding: 10px !important;
-    max-height: 40%;
+.child {
+  margin-bottom: 20px;
+  padding: 5px;
+  border: 1px solid #dddddd;
+  width: calc(50% - 10px);
 }
-
-.Category button{
-    margin-top: 10px !important;
+.name {
+  font-size: 14px;
+  font-weight: 700;
+}
+.price {
+  font-size: 12px;
+  font-weight: 600;
+  color: rgb(245, 114, 36);
 }
